<resources>

    <string name="app_name">PostCard</string>
    <string name="load_activity_title">明信片</string>
    <string name="load_activity_description">XX名信片</string>
    <string name="load_activity_copyright">copyright 2014-2017</string>
    <string name="post_card_mobile_title">联系电话</string>
    <string name="post_card_mobile_empty">暂无联系电话</string>
    <string name="post_card_mobile_type">类型:</string>
    <string name="post_card_email_title">电子邮件</string>
    <string name="post_card_emial_empty">暂无电子邮件</string>
    <string name="post_card_company_title">公司</string>
    <string name="post_card_company_empty">暂无公司</string>
    <string name="post_card_company_name">公司名称：</string>
    <string name="post_card_company_address">公司地址：</string>
    <string name="post_card_company_staff">个人职务：</string>
    <string name="post_card_company_depart">所在部门：</string>
    <string name="post_card_card_holder">名片夹</string>
    <string name="post_card_card_holder_import_contact">导入系统联系人</string>
    <string name="post_card_card_holder_edit_contact">手动输入名片</string>
    <string name="post_card_details_title">名信片详情</string>
    <string name="post_card_editable_title">编辑名信片信息</string>
    <string name="post_card_family_name_hints">姓氏</string>
    <string name="post_card_first_name_hints">名字</string>
    <string name="post_card_mobile">电话</string>
    <string name="post_card_email">电子邮件</string>
    <string name="post_card_company">公司</string>
    <string name="post_card_select_all">全选</string>
    <string name="post_card_dis_select_all">全部取消</string>
    <string name="post_card_import">导入</string>
    <string name="post_card_cancel">取消</string>
    <string name="post_card_no_contact">"暂无系统联系人"</string>
    <string name="post_card_no_nfc_hardware_error">没有NFC识别设备</string>
    <string name="post_card_muti_operate">批量操作</string>
    <string name="post_card_delete">删除</string>
    <string name="post_card_insert_failure">导入失败</string>
    <string name="post_card_insert_success">导入成功</string>
    <string name="post_card_insert_into_nfc">写入到NFC</string>
    <string name="post_card_save">保存</string>
    <string name="post_card_orc_title">名片识别</string>
    <string name="post_card_orc_dialog_title">名片识别</string>
    <string name="post_card_orc_dialog_message">"正在识别中..."</string>
    <string name="post_card_orc_album">相册选取</string>
    <string name="post_card_orc_camera">拍照</string>
    <string name="post_card_orc_image">选中图片：</string>

</resources>