<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/exchange_bg"
    android:orientation="vertical" >

    <include
        android:id="@+id/action_bar_import_contact"
        android:layout_alignParentTop="true"
        layout="@layout/post_card_import_contacts_action_bar_layout" />

    <LinearLayout
        android:id="@+id/bottom_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/post_card_cancel"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_select_all"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/post_card_import"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/contact_listview"
        android:layout_below="@id/action_bar_import_contact"
        android:layout_above="@id/bottom_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@android:color/white"
        android:divider="@color/setting_common_line"
        android:dividerHeight="1px"
        android:scrollbars="none"
        android:scrollingCache="false"
        android:visibility="visible" >
    </ListView>
    
    <RelativeLayout
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="visible" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/evaluate_icon_notice" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/post_card_no_contact"
                android:textColor="@android:color/white"
                android:textSize="15sp" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>