<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/action_bar_details"
        android:layout_alignParentTop="true"
        layout="@layout/action_bar_layout" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/post_card_orc_image"
                    android:textColor="@android:color/black"
                    android:textSize="23dp" />

                <ImageView
                    android:id="@+id/post_card_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/qr_nocard" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bg_item"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp" >

                    <ImageView
                        android:id="@+id/avatar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20dp"
                        android:background="@null"
                        android:contentDescription="@null"
                        android:src="@drawable/avatar" />

                    <EditText
                        android:id="@+id/name_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_toRightOf="@id/avatar"
                        android:background="@drawable/edittext_holo_light"
                        android:hint="@string/post_card_family_name_hints" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_item"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp" >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="10dp"
                            android:background="@null"
                            android:src="@drawable/ic_call" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:gravity="left|center_vertical"
                            android:paddingLeft="10dp"
                            android:text="@string/post_card_mobile_title"
                            android:textColor="@android:color/black"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/phone_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:background="@drawable/edittext_holo_light" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp" >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="10dp"
                            android:background="@null"
                            android:src="@drawable/ic_cv_email" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:gravity="left|center_vertical"
                            android:paddingLeft="10dp"
                            android:text="@string/post_card_email"
                            android:textColor="@android:color/black"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/email_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:background="@drawable/edittext_holo_light" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp" >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="10dp"
                            android:background="@null"
                            android:src="@drawable/ic_cv_company" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:gravity="left|center_vertical"
                            android:paddingLeft="10dp"
                            android:text="@string/post_card_company_name"
                            android:textColor="@android:color/black"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/company_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:background="@drawable/edittext_holo_light" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp" >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="10dp"
                            android:background="@null"
                            android:src="@drawable/ic_cv_company"
                            android:visibility="invisible" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:gravity="left|center_vertical"
                            android:paddingLeft="10dp"
                            android:text="@string/post_card_company_staff"
                            android:textColor="@android:color/black"
                            android:textSize="18sp"
                            android:visibility="visible" />

                        <EditText
                            android:id="@+id/staff_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:background="@drawable/edittext_holo_light" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp" >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="10dp"
                            android:background="@null"
                            android:src="@drawable/ic_cv_company"
                            android:visibility="invisible" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:gravity="left|center_vertical"
                            android:paddingLeft="10dp"
                            android:text="@string/post_card_company_depart"
                            android:textColor="@android:color/black"
                            android:textSize="18sp"
                            android:visibility="visible" />

                        <EditText
                            android:id="@+id/depart_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:background="@drawable/edittext_holo_light" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp" >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="10dp"
                            android:background="@null"
                            android:src="@drawable/ic_cv_company"
                            android:visibility="invisible" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:gravity="left|center_vertical"
                            android:paddingLeft="10dp"
                            android:text="@string/post_card_company_address"
                            android:textColor="@android:color/black"
                            android:textSize="18sp"
                            android:visibility="visible" />

                        <EditText
                            android:id="@+id/company_address_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:background="@drawable/edittext_holo_light" />
                    </LinearLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/save_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_selector"
                    android:gravity="center"
                    android:text="@string/post_card_save"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/menu_layout"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="-5dp"
            android:layout_marginTop="-10dp"
            android:background="@drawable/abc_menu_dropdown_panel_holo_dark"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:id="@+id/btn_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/menu_selector"
                android:clickable="true"
                android:gravity="left|center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/post_card_orc_camera"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/setting_common_line" />

            <TextView
                android:id="@+id/btn_select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/menu_selector"
                android:clickable="true"
                android:gravity="left|center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/post_card_orc_album"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>